@@ -29,4 +29,3 @@ Author: Rebecca Killick [aut, cre],
   Paul Fearnhead [ctb, ths],
   Robin Long [ctb],
   Jamie Lee [ctr]
-RoxygenNote: 7.3.2
