@@ -19,4 +19,3 @@ BuildType: Package
 PackageUseDevtools: Yes
 PackageInstallArgs: --no-multiarch --with-keep.source
 PackageCheckArgs: --as-cran --no-tests
-PackageRoxygenize: rd,collate,namespace
